syntax = "proto3";

package deposit;

service DepositService {
  rpc MakeDeposit(MakeDepositRequest) returns (MakeDepositResponse);
  rpc CheckAccountBalance(CheckAccountBalanceRequest) returns (CheckAccountBalanceResponse);
}

message MakeDepositRequest {
  string from_account_id = 1;
  string to_account_id = 2;
  double amount = 3;
  bool is_bank_agent = 4;
}

message MakeDepositResponse {
  bool success = 1;
}

message CheckAccountBalanceRequest {
  string account_id = 1;
}

message CheckAccountBalanceResponse {
  double balance = 1;
}
